syntax = "proto3";
package api;

option go_package = "github.com/clpombo/search/api";


message Contract {
    string contract = 1; // local participant must be called "self" or some other distinguished name
    repeated string remote_participants = 2; // participant identifiers (must be referenced in the contract)
}