syntax = "proto3";
package protobuf;

import "protobuf/contracts.proto";

option go_package = "dc.uba.ar/this/search/protobuf";


service Broker {
    rpc InitiateChannel (RequirementsContract) returns (ChannelCreation) {}
}


message ChannelCreation {
    string session_id = 1;
    map<string, RemoteParticipant> participants = 2;
}

message RemoteParticipant {
    string url = 1;
    string app_id = 2;
}